parse-display-tests/tests/compile_fail/display_invalid_format.rs
use parse_display::Display;
#[derive(Display)]
#[display("{x")]
struct TestStruct;

fn main() {}
